--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -20,7 +20,6 @@
     flex-direction: column;
     position: relative;
     @media (min-width:720px) {
-        width: 100%;
         height: 100vh;
         justify-content: center;
     }
@@ -104,7 +103,7 @@
 
 .main__form{
     width: 90%;
-    margin: 0px auto;
+    margin: 48px auto;
     @media (min-width:720px) {
         width: 380px;
         margin-left: 0;
@@ -116,11 +115,7 @@
             font-size: 12px;
             letter-spacing: 2px;
             text-transform: uppercase;
-            margin-top: 26px;
             margin-bottom: 9px;
-            &:first-child{
-                margin-top: 0;
-            }
         }
         &__input{
             width: 100%;
@@ -129,6 +124,7 @@
             border-radius: 8px;
             outline: none;
             padding: 12px 16px 8px;
+            margin-bottom: 28px;
             &::placeholder{
                 color: variables.$light-grayish-violet;
                 font-size: 18px;
@@ -148,18 +144,17 @@
         }
         &__errors{
             display: flex;
-            color: red;
+            gap: 12px;
         }
     }
 }
 
 
 .message{
+    display: none;
     width: 90%;
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
     margin: 48px auto;
     @media (min-width:720px) {
         width: 380px;
@@ -186,13 +181,22 @@
 }
 
 .error{
+    width: 100%;
     font-size: 12px;
     color: variables.$red;
-    margin-top: 6px;
+    margin-top: -24px;
     margin-bottom: 18px;
 }
 
-.form__errors{
-    display: flex;
-    gap: 14px;
+footer{
+    font-size: 10px;
+    text-align: center;
+    margin-bottom: 0;
+    @media (min-width:720px) {
+        margin-top: -48px;
+    }
+    color: variables.$dark-grayish-violet;
+    a{
+        color: variables.$very-dark-violet;
+    }
 }
