--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,7 +3,7 @@
 @use './mixins';
 
 .main{
-    @media (min-width: 720px) {
+    @media (min-width: 1440px) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         height: 100vh;
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    @media (min-width:720px) {
+    @media (min-width:1440px) {
         height: 100vh;
         justify-content: center;
     }
@@ -30,7 +30,7 @@
         height: 240px;
         position: absolute;
         z-index: 1;
-        @media (min-width:720px) {
+        @media (min-width:1440px) {
             background-image: url('../images/bg-main-desktop.png');
             width: 65%;
             height: 100%;
@@ -38,12 +38,13 @@
     }
     .card__container{
         width: 90%;
+        max-width: 480px;
         margin: 0 auto;
         display: flex;
         align-items: center;
         flex-direction: column;
         z-index: 2;
-        @media (min-width:720px) {
+        @media (min-width:1440px) {
             width: 540px;
             height: 527px;
             margin-right: 0;
@@ -56,7 +57,7 @@
         &__logo{
             width: 54px;
             margin-bottom: 33px;
-            @media (min-width:720px) {
+            @media (min-width:1440px) {
                 width: 84px;
                 margin-bottom: 64px;
             }
@@ -65,7 +66,7 @@
             font-size: 18px;
             margin-bottom: 17px;
             letter-spacing: 2.2px;
-            @media (min-width:720px) {
+            @media (min-width:1440px) {
                 font-size: 28px;
                 margin-bottom: 25px;
                 letter-spacing: 3.4px;
@@ -77,7 +78,7 @@
             font-size: 9px;
             text-transform: uppercase;
             letter-spacing: 1.2px;
-            @media (min-width:720px) {
+            @media (min-width:1440px) {
                 font-size: 14px;
                 letter-spacing: 2px;
             }
@@ -91,7 +92,7 @@
             top: 71px;
             font-size: 9px;
             letter-spacing: 1.2px;
-            @media (min-width:720px) {
+            @media (min-width:1440px) {
                 right: 57px;
                 top: 112px;
                 font-size: 14px;
@@ -103,8 +104,9 @@
 
 .main__form{
     width: 90%;
+    max-width: 480px;
     margin: 48px auto;
-    @media (min-width:720px) {
+    @media (min-width:1440px) {
         width: 380px;
         margin-left: 0;
     }
@@ -156,7 +158,7 @@
     margin: auto;
     text-align: center;
     margin: 48px auto;
-    @media (min-width:720px) {
+    @media (min-width:1440px) {
         width: 380px;
         margin-left: 0;
     }
@@ -192,7 +194,7 @@ footer{
     font-size: 10px;
     text-align: center;
     margin-bottom: 0;
-    @media (min-width:720px) {
+    @media (min-width:1440px) {
         margin-top: -48px;
     }
     color: variables.$dark-grayish-violet;
